# termcanvas

./: Cargo.toml  README.md
src/: canvas.rs  input.rs  main.rs  math.rs
src/canvas/: draw.rs  font.rs
src/math/: mathf.rs  mathi.rs  noise.rs
